# nhsdigital.eps-vpc-resources

./: package-lock.json  package.json  pyproject.toml
.github/workflows/: auto_approve_dependabot.yml  ci.yml  pull_request.yml  release.yml
_data/: dev_deployments.csv  dev_latest.csv  int_deployments.csv  int_latest.csv  prod_deployments.csv  prod_latest.csv  qa_deployments.csv  qa_latest.csv  ref_deployments.csv  ref_latest.csv
release_notes/: v1.0.59-beta.md  v1.0.60-beta.md
