
[project]
python = "^3.14"
name = "eps-vpc-resources"

[tool.poetry]
name = "eps-vpc-resources"
version = "0.0.1-alpha"
description = "EPS VPC Resources"
license = "MIT"
authors = [
    "EPS"
]
readme = "README.md"
repository = "https://github.com/NHSDigital/eps-vpc-resources"
package-mode = false

[tool.poetry.dependencies]
python = "^3.14"
pytest = "^9.0.3"

[tool.poetry.scripts]

[tool.poetry.group.dev.dependencies]
pre-commit = "^4.6.0"
